--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.4.0",
     "express-rate-limit": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^5.2.0",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
