--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "countries-list": "^2.6.1",
-    "mdbreact": "^5.2.0",
+    "moment": "^2.29.4",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
